[UPDATE] Fixed class consistency